--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="resumo">
             <h2>Resumo</h2>
 
-            <div>
+            <div class="reacao">
 
                 <div>
 
@@ -39,7 +39,7 @@
                 <strong>80 / 100</strong>    
 
             </div>
-            <div>
+            <div class="memoria">
 
                 <div>
 
@@ -52,7 +52,7 @@
                 <strong>92 / 100</strong>    
                 
             </div>
-            <div>
+            <div class="verbal">
                 
                 <div>
 
@@ -65,7 +65,7 @@
                 <strong>61 / 100</strong>    
 
             </div>
-            <div>
+            <div class="visual">
 
                 <div>
 
