--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 </div>
 
-                <strong>80 / 100</strong>    
+                <strong>80 <span>/ 100</span></strong>    
 
             </div>
             <div class="memoria">
@@ -49,7 +49,7 @@
 
                 </div>
 
-                <strong>92 / 100</strong>    
+                <strong>92 <span>/ 100</span></strong>    
                 
             </div>
             <div class="verbal">
@@ -62,7 +62,7 @@
 
                 </div>
 
-                <strong>61 / 100</strong>    
+                <strong>61 <span>/ 100</span></strong>    
 
             </div>
             <div class="visual">
@@ -75,7 +75,7 @@
 
                 </div>
 
-                <strong>73 / 100</strong>    
+                <strong>73 <span>/ 100</span></strong>    
 
             </div>
 
